--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+/* Optional: import Nextra theme styles */
+@import 'nextra-theme-docs/style.css'; /* or nextra-theme-blog/style.css */
+ 
+@variant dark (&:where(.dark *));
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,17 +15,4 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
