--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
 @variant dark (&:where(.dark *));
 
 @theme static {
+  --font-sans: var(--font-crimson-pro);
+  --font-mono: var(--font-crimson-pro);
   --color-um-dyr-solid: #a6ffb3;
   --color-um-dyr-tint: #dcf2e0;
   --color-um-arkeologi-solid: #ff9595;
@@ -38,8 +40,6 @@
   --color-um-stein-tint: #f1fbff;  
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-crimson-pro);
-  --font-mono: var(--font-crimson-pro);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -148,11 +148,16 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    /* font-size: 1rem; */
   }
   body {
     @apply bg-background text-foreground;
+    font-family: var(--font-serif);
   }
-  article {
+  /* article {
    padding: 0 !important;
+  } */
+  .nextra-sidebar-footer {
+    background-color: unset !important;
   }
 }
