--- a/src/components/styles/content-grid.css
+++ b/src/components/styles/content-grid.css
@@ -12,32 +12,52 @@
     row-gap: 0;
     width: 100%;
     grid-template-columns:
-      [full-start] var(--full)
-      [feature-start] var(--feature)
-      [popout-start] var(--popout)
+      [full-start] 0
+      [feature-start] 0
+      [popout-start] 0
       [content-start] var(--content) [content-end]
-      var(--popout) [popout-end]
-      var(--feature) [feature-end]
-      var(--full) [full-end];
+      [popout-end] 0
+      [feature-end] 0
+      [full-end] 0;
+
+    @media (min-width: 74rem) {
+      grid-template-columns:
+        [full-start] var(--full)
+        [feature-start] var(--feature)
+        [popout-start] var(--popout)
+        [content-start] var(--content) [content-end]
+        var(--popout) [popout-end]
+        var(--feature) [feature-end]
+        var(--full) [full-end];
+    }
 
     > * {
       grid-column: content;
-      margin-block: 0.5rem !important;
+      margin-block: 0.75rem !important;
+    }
+    > p {
+      @media (min-width: 48rem) {
+        font-size: var(--text-lg);
+        line-height: var(--text-lg--line-height);
+      }
     }
     h1, h2, h3, h4, h5, h6 {
-      margin-block: 0.25rem !important;
+      margin-block: 0.75rem !important;
     }
 
-    aside {
+    > aside {
       grid-column: 6/7;
-      font-size: var(--text-base);
-      line-height: var(--leading-snug);
+      font-size: var(--text-sm);
+
+      p {
+        line-height: var(--leading-normal) !important;
+      }
 
       @container (width < 64rem) {
         @apply border rounded-md;
         grid-column: content;
-        padding: 0.5rem;
-        margin-block: 0.5rem !important;
+        padding: 0.75rem;
+        margin-block: 0.75rem !important;
       }
     }
 
