--- a/src/components/styles/content-grid.css
+++ b/src/components/styles/content-grid.css
@@ -2,23 +2,36 @@
   .content-grid {
     --gap: clamp(1rem, 6vw, 3rem);
     --full: minmax(var(--gap), 1fr);
-    --content: min(65ch, 100% - var(--gap) * 2);
+    --content: min(60ch, 100% - var(--gap) * 2);
     --popout: minmax(1rem, 1.5rem);
-    --feature: minmax(0, 10rem);
+    --feature: minmax(4rem, 16rem);
 
     display: grid;
     container-name: content-grid;
     container-type: inline-size;
     row-gap: 0;
     width: 100%;
+    max-width: 96rem;
+    margin-inline: auto;
     grid-template-columns:
+      [full-start] var(--full)
+      [feature-start] 
+      [popout-start] 0
+      [content-start] min(45ch, 100% - var(--gap)) [content-end]
+      0 [popout-end] 
+      0 [feature-end]
+      var(--full) [full-end];
+    
+    @media (min-width: 40rem) {
+      grid-template-columns:
       [full-start] 0
-      [feature-start] 0
+      [feature-start] var(--feature)
       [popout-start] 0
       [content-start] var(--content) [content-end]
-      [popout-end] 0
-      [feature-end] 0
-      [full-end] 0;
+      0 [popout-end] 
+      var(--feature) [feature-end]
+      0 [full-end];
+    }
 
     @media (min-width: 74rem) {
       grid-template-columns:
