--- a/src/components/styles/content-grid.css
+++ b/src/components/styles/content-grid.css
@@ -3,8 +3,8 @@
     --gap: clamp(1rem, 6vw, 3rem);
     --full: minmax(var(--gap), 1fr);
     --content: min(60ch, 100% - var(--gap) * 2);
-    --popout: minmax(1rem, 1.5rem);
-    --feature: minmax(4rem, 16rem);
+    --popout: minmax(6rem, 6.5rem);
+    --feature: minmax(2rem, 16rem);
 
     display: grid;
     container-name: content-grid;
@@ -24,13 +24,13 @@
     
     @media (min-width: 40rem) {
       grid-template-columns:
-      [full-start] 0
-      [feature-start] var(--feature)
-      [popout-start] 0
-      [content-start] var(--content) [content-end]
-      0 [popout-end] 
-      var(--feature) [feature-end]
-      0 [full-end];
+        [full-start] 0
+        [feature-start] var(--feature)
+        [popout-start] minmax(2rem, 2.5rem)
+        [content-start] min(50ch, 100% - var(--gap) * 2)  [content-end]
+        minmax(2rem, 2.5rem) [popout-end] 
+        var(--feature) [feature-end]
+        0 [full-end];
     }
 
     @media (min-width: 74rem) {
@@ -78,7 +78,7 @@
       }
     }
 
-    figure {
+    /* figure {
       margin-block: 3.5rem;
       
       @container (width < 64rem) {
@@ -111,13 +111,17 @@
           margin-top: 0.5rem !important;
         }
       }
-    }
+    } */
     .feature {
       grid-column: feature;
       grid-template-columns: subgrid;
     }
     .full {
       grid-column: full;
+      grid-template-columns: subgrid;
+    }
+    .popout {
+      grid-column: popout;
       grid-template-columns: subgrid;
     }
   }
