Update color variable for 'um-tegn-tint' in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
   --color-um-hverdag-solid: #5acaae;
   --color-um-hverdag-tint: #e4f2ee;
   --color-um-tegn-solid: #f5f8c3;
-  --color-um-tegn-tint: #feffea;
+  --color-um-tegn-tint: #FEFEF9;
   --color-um-vaer-solid: #97cbff;
   --color-um-vaer-tint: #e3f1ff;
   --color-um-kirkekunst-solid: #dbb3a4;
