--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,181 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+/* Optional: import Nextra theme styles */
+@import 'nextra-theme-docs/style.css';
+/* @import "tw-animate-css"; */
+@import "../components/styles/content-grid.css";
 
-@theme inline {
+@custom-variant dark (&:is(.dark *)); /* or nextra-theme-blog/style.css */
+
+@variant dark (&:where(.dark *));
+
+@theme static {
+  --font-sans: var(--font-crimson-pro);
+  --font-serif: var(--font-crimson-pro);
+  --font-mono: var(--font-crimson-pro);
+  --font-marcus: var(--font-marcus);
+  --color-um-dyr-solid: #a6ffb3;
+  --color-um-dyr-tint: #dcf2e0;
+  --color-um-arkeologi-solid: #ff9595;
+  --color-um-arkeologi-tint: #fdf0f0;
+  --color-um-fisk-solid: #9595ff;
+  --color-um-fisk-tint: #f0f0ff;
+  --color-um-hverdag-solid: #5acaae;
+  --color-um-hverdag-tint: #e4f2ee;
+  --color-um-tegn-solid: #f5f8c3;
+  --color-um-tegn-tint: #FEFEF9;
+  --color-um-vaer-solid: #97cbff;
+  --color-um-vaer-tint: #e3f1ff;
+  --color-um-kirkekunst-solid: #dbb3a4;
+  --color-um-kirkekunst-tint: #f3e4de;
+  --color-um-helse-solid: #dfe2f8;
+  --color-um-helse-tint: #f4f5ff;
+  --color-um-utland-solid: #ebc39b;
+  --color-um-utland-tint: #f9ebde;
+  --color-um-glass-solid: #9ce0ff;
+  --color-um-glass-tint: #e3f6ff;
+  --color-um-vekster-solid: #c3f5e2;
+  --color-um-vekster-tint: #e8faf3;
+  --color-um-tidrom-solid: #f5d2dc;
+  --color-um-tidrom-tint: #fff6f9;
+  --color-um-stein-solid: #cee6ee;
+  --color-um-stein-tint: #f1fbff;  
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --font-digitalarkivet: 'Times New Roman', Times, serif;
+  --nextra-content-width: 100% !important;
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.141 0.005 285.823);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.141 0.005 285.823);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.141 0.005 285.823);
+  --primary: oklch(0.21 0.006 285.885);
+  --primary-foreground: oklch(0.985 0 0);
+  --secondary: oklch(0.967 0.001 286.375);
+  --secondary-foreground: oklch(0.21 0.006 285.885);
+  --muted: oklch(0.967 0.001 286.375);
+  --muted-foreground: oklch(0.552 0.016 285.938);
+  --accent: oklch(0.967 0.001 286.375);
+  --accent-foreground: oklch(0.21 0.006 285.885);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.92 0.004 286.32);
+  --input: oklch(0.92 0.004 286.32);
+  --ring: oklch(0.705 0.015 286.067);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.141 0.005 285.823);
+  --sidebar-primary: oklch(0.21 0.006 285.885);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.967 0.001 286.375);
+  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
+  --sidebar-border: oklch(0.92 0.004 286.32);
+  --sidebar-ring: oklch(0.705 0.015 286.067);
+}
+
+.dark {
+  --background: oklch(0.141 0.005 285.823);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.21 0.006 285.885);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.21 0.006 285.885);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.92 0.004 286.32);
+  --primary-foreground: oklch(0.21 0.006 285.885);
+  --secondary: oklch(0.274 0.006 286.033);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.274 0.006 286.033);
+  --muted-foreground: oklch(0.705 0.015 286.067);
+  --accent: oklch(0.274 0.006 286.033);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.552 0.016 285.938);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.21 0.006 285.885);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.274 0.006 286.033);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.552 0.016 285.938);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    /* font-size: 1rem; */
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+    font-family: var(--font-serif);
+    font-variant-numeric: tabular-nums;
+  }
+  /* article {
+   padding: 0 !important;
+  } */
+  .nextra-sidebar-footer {
+    background-color: white !important;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    @apply tracking-wider font-medium;
+  }
+  h2 {
+    @apply border-none;
+  }
+  a {
+    @apply text-primary underline-offset-4 underline;
+  }
+  header a,
+  button a,
+  a[data-slot="button"] {
+    @apply text-inherit no-underline;
+  }
 }
