--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,12 @@
   --font-serif: var(--font-crimson-pro);
   --font-mono: var(--font-crimson-pro);
   --font-marcus: var(--font-marcus);
+  --color-bylov-red: #fe5338;
+  --color-bylov-black: #2f0022;
+  --color-bylov-gold: #e4d2a1;
+  --color-bylov-blue: #536abe;
+  --color-bylov-green: #adec9a;
+  --color-bylov-white: #f6f2eb;
   --color-um-dyr-solid: #a6ffb3;
   --color-um-dyr-tint: #dcf2e0;
   --color-um-arkeologi-solid: #ff9595;
